# F6723_ucc

./: .gitignore  CLAUDE.md  PRD.md  game_prd.md  mcp_servers.sample.json  previous_interaction_id.txt  pyproject.toml  ucc.md
.playwright-mcp/: page-2026-04-03T07-53-08-405Z.yml  page-2026-04-03T08-32-17-735Z.yml  page-2026-04-03T08-43-46-459Z.yml  page-2026-04-03T08-43-53-229Z.yml
skills/: api-design.md  browser.md  file-operations.md  programming.md  python-basics.md  temperature.md
src/: chat.py  mcp_utils.py  u_skills.py
src/ucc/: __init__.py  chat.py  google_search.py  u_skills.py
tests/: test_u_skills.py
